2010-10-05  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-tag-em): Add <EM> tag.

2010-10-05  Florian Ragwitz  <rafl@debian.org>  (tiny change)

	* sieve-manage.el (sieve-manage-default-stream): Make default stream
	customizable.

	* gnus-html.el (gnus-html-wash-tags): Decode URL entities to avoid
	handing broken links to browse-url.

2010-10-05  Julien Danjou  <julien@danjou.info>

	* gnus-util.el (gnus-emacs-completing-read)
	(gnus-iswitchb-completing-read): Use autoload rather than require.

2010-10-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-util.el (gnus-completing-read-function): Exclude
	gnus-icompleting-read and gnus-ido-completing-read from candidates for
	XEmacs since iswitchb.el is very old and ido.el is unavailable in
	XEmacs.

	* gnus-registry.el (gnus-registry-install-nnregistry): Rewrite so as
	not to use `delete-dups' that is unavailable in XEmacs 21.4.

	* gnus-html.el: Don't require help-fns under XEmacs.
	(gnus-html-schedule-image-fetching): Work for XEmacs.

	* mm-decode.el (mm-shr): Decode contents by charset.

2010-10-04  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-tag-blockquote): Ensure paragraph after quote, too.
	(shr-get-image-data): Ensure against the cache file missing.

	* nnimap.el (nnimap-finish-retrieve-group-infos): Message while waiting
	for data.

	* spam-report.el (spam-report-url-ping-plain): Don't query about
	killing the process.

	* shr.el (shr-render-td): Protect against too-wide text.

2010-10-04  Julien Danjou  <julien@danjou.info>

	* mml-smime.el (mml-smime-openssl-encrypt-query): Fix choices.
	(mml-smime-openssl-sign-query): Fix gnus-completing-read call.

	* gravatar.el (gravatar-retrieved): Kill buffer when gravatar has been
	retrieved.

2010-10-04  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (browse-url): Required.
	(shr-ensure-paragraph): Don't insert a new newline after empty-ish
	lines.
	(shr-show-alt-text, shr-browse-image): New commands.